Arreglamos los primero metodos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     
-    <script src="index.js" type="module"></script>
+    <script src="prompts.js" type="module"></script>
+    <script src="hello.js" type="module"></script>
+
+    <script src="first.js" type="module"></script>
+    <script src="last.js" type="module"></script>
+
+
 </body>
 </html>
