Arreglamos los metodos relacionados a letra

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <script src="first.js" type="module"></script>
     <script src="last.js" type="module"></script>
+    <script src="noFirstThree.js" type="module"></script>
+    <script src="capitalLetters.js" type="module"></script>
 
 
 </body>
