Arreglamos los metodos relacionados a numeros

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 <body>
     
     <script src="prompts.js" type="module"></script>
-    <script src="hello.js" type="module"></script>
 
+    <script src="hello.js" type="module"></script>
+    <script src="length.js" type="module"></script>
     <script src="first.js" type="module"></script>
     <script src="last.js" type="module"></script>
     <script src="noFirstThree.js" type="module"></script>
     <script src="capitalLetters.js" type="module"></script>
+
+    <script src="age.js" type="module"></script>
+    <script src="season.js" type="module"></script>
+    <script src="cos.js" type="module"></script>
+    <script src="biggerNum.js" type="module"></script>
+    <script src="random.js" type="module"></script>
 
 
 </body>
