Reestructuramos el proyecto completo

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     
-    <script src="prompts.js" type="module"></script>
+    <script src="/scripts/prompts.js" type="module"></script>
 
-    <script src="hello.js" type="module"></script>
-    <script src="length.js" type="module"></script>
-    <script src="first.js" type="module"></script>
-    <script src="last.js" type="module"></script>
-    <script src="noFirstThree.js" type="module"></script>
-    <script src="capitalLetters.js" type="module"></script>
+    <script src="/scripts/hello.js" type="module"></script>
+    <script src="/scripts/length.js" type="module"></script>
+    <script src="/scripts/first.js" type="module"></script>
+    <script src="/scripts/last.js" type="module"></script>
+    <script src="/scripts/noFirstThree.js" type="module"></script>
+    <script src="/scripts/capitalLetters.js" type="module"></script>
 
-    <script src="age.js" type="module"></script>
-    <script src="season.js" type="module"></script>
-    <script src="cos.js" type="module"></script>
-    <script src="biggerNum.js" type="module"></script>
-    <script src="random.js" type="module"></script>
+    <script src="/scripts/age.js" type="module"></script>
+    <script src="/scripts/season.js" type="module"></script>
+    <script src="/scripts/cos.js" type="module"></script>
+    <script src="/scripts/biggerNum.js" type="module"></script>
+    <script src="/scripts/random.js" type="module"></script>
 
-
+    <script src="/scripts/buttons.js" type="module"></script>
 </body>
 </html>
