Acabamos el proyecto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Práctica 3</title>
 </head>
 <body>
-    
+    <h1>PRÁCTICA 3 - DWEC</h1>
+    <hr>
     <script src="/scripts/prompts.js" type="module"></script>
 
     <script src="/scripts/hello.js" type="module"></script>
@@ -24,6 +25,5 @@
     <script src="/scripts/random.js" type="module"></script>
 
     <script src="/scripts/buttons.js" type="module"></script>
-
 </body>
 </html>
